--- a/Food Website/index.html
+++ b/Food Website/index.html
@@ -38,6 +38,12 @@
     <!-- header section Ends  -->
     </header>
 
+    <!-- Search form  -->
+    <form action="" id="search-form">
+        <input type="search" placeholder="search here..." name="" id="search-box">
+        <label for="search-form" class="fas fa-search"></label>
+    </form>
+
 
     <!-- custome js file link  -->
 <script src="./script.js"></script></body>
