--- a/Food Website/index.html
+++ b/Food Website/index.html
@@ -42,6 +42,7 @@
     <form action="" id="search-form">
         <input type="search" placeholder="search here..." name="" id="search-box">
         <label for="search-form" class="fas fa-search"></label>
+        <i class="fas fa-times" id="close"></i>
     </form>
 
 
