add image slider

--- a/Food Website/index.html
+++ b/Food Website/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Website</title>
 
+     <!-- swiper cnd  -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+
     <!-- font awsome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 
@@ -46,6 +49,65 @@
     </form>
 
 
+    <!-- home section starts  -->
+
+    <section class="home" id="home">
+        <div class="swiper mySwiper home-slider">
+            <div class="swiper-wrapper wrapper">
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse blandit nibh non tristique varius.</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="./images/home-img-1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>fried chicken</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse blandit nibh non tristique varius.</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="./images/home-img-2.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our special dish</span>
+                        <h3>hot pizza</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse blandit nibh non tristique varius.</p>
+                        <a href="#" class="btn">order now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="./images/home-img-3.png" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="swiper-pagination"></div>
+
+        </div>
+         
+    </section>
+
+    <!-- home section Ends  -->
+
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!-- custome js file link  -->
-<script src="./script.js"></script></body>
+    <script src="./script.js"></script>
+</body>
 </html>
